// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPost should match the last snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation (
        $type: String
        $title: String
        $details: String
        $communityIds: [String]
        $startTime: String
        $endTime: String
        $locationId: ID
        $imageUrls: [String]
        $fileUrls: [String]
        $announcement: Boolean
        $topicNames: [String]
        $memberIds: [ID]        
      ) {
        createPost(data: {
          type: $type
          title: $title
          details: $details
          communityIds: $communityIds
          startTime: $startTime
          endTime: $endTime
          locationId: $locationId
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          announcement: $announcement
          topicNames: $topicNames
          memberIds: $memberIds
        }) {
          
  id
  title
  details
  type
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  announcement
  creator {
    id
    name
    avatarUrl
    tagline
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  commentsTotal
  
  linkPreview {
    title
    url
    imageUrl
  }
  votesTotal
  myVote
  communities {
    id
    name
    slug
  }
  attachments {
    id
    position
    type
    url
  }
  postMemberships {
    id
    pinned
    community {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    items {
      id
      name
      avatarUrl
    }
    total
  }
        }
      }",
    "variables": Object {
      "announcement": undefined,
      "communityIds": Array [
        undefined,
      ],
      "details": "details",
      "endTime": "endTime",
      "fileUrls": Array [],
      "imageUrls": Array [],
      "locationId": undefined,
      "memberIds": Array [],
      "startTime": "startTime",
      "title": "title",
      "topicNames": Array [],
      "type": "post",
    },
  },
  "meta": Object {
    "analytics": Object {
      "detailsLength": 7,
      "eventName": "Post Created",
      "isAnnouncement": undefined,
    },
    "extractModel": "Post",
  },
  "type": "PostEditor/CREATE_POST",
}
`;

exports[`createProject should match the last snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation (
        $type: String
        $title: String
        $details: String
        $communityIds: [String]
        $startTime: String
        $endTime: String
        $locationId: ID
        $imageUrls: [String]
        $fileUrls: [String]
        $announcement: Boolean
        $topicNames: [String]
        $memberIds: [ID]        
      ) {
        createPost(data: {
          type: $type
          title: $title
          details: $details
          communityIds: $communityIds
          startTime: $startTime
          endTime: $endTime
          locationId: $locationId
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          announcement: $announcement
          topicNames: $topicNames
          memberIds: $memberIds
        }) {
          
  id
  title
  details
  type
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  announcement
  creator {
    id
    name
    avatarUrl
    tagline
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  commentsTotal
  
  linkPreview {
    title
    url
    imageUrl
  }
  votesTotal
  myVote
  communities {
    id
    name
    slug
  }
  attachments {
    id
    position
    type
    url
  }
  postMemberships {
    id
    pinned
    community {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    items {
      id
      name
      avatarUrl
    }
    total
  }
        }
      }",
    "variables": Object {
      "announcement": undefined,
      "communityIds": Array [
        undefined,
      ],
      "details": "details",
      "endTime": "endTime",
      "fileUrls": Array [],
      "imageUrls": Array [],
      "locationId": undefined,
      "memberIds": Array [
        1,
        2,
        3,
      ],
      "startTime": "startTime",
      "title": "title",
      "topicNames": Array [],
      "type": "post",
    },
  },
  "meta": Object {
    "analytics": Object {
      "detailsLength": 7,
      "eventName": "Post Created",
      "isAnnouncement": undefined,
    },
    "extractModel": "Post",
  },
  "type": "PostEditor/CREATE_POST",
}
`;

exports[`updatePost should match the last snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($id: ID
        $type: String
        $title: String
        $details: String
        $communityIds: [String]
        $startTime: String
        $endTime: String
        $locationId: ID
        $imageUrls: [String]
        $fileUrls: [String]
        $topicNames: [String]
        $memberIds: [ID]        
      ) {
        updatePost(id: $id, data: {
          type: $type
          title: $title
          details: $details
          communityIds: $communityIds
          startTime: $startTime
          endTime: $endTime
          locationId: $locationId
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          topicNames: $topicNames
          memberIds: $memberIds
        }) {
          
  id
  title
  details
  type
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  announcement
  creator {
    id
    name
    avatarUrl
    tagline
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  commentsTotal
  comments(first: 10, order: \\"desc\\") {
    items {
      id
      text
      creator {
        id
        name
        avatarUrl
      }
      createdAt
    }
    total
    hasMore
  }
  linkPreview {
    title
    url
    imageUrl
  }
  votesTotal
  myVote
  communities {
    id
    name
    slug
  }
  attachments {
    id
    position
    type
    url
  }
  postMemberships {
    id
    pinned
    community {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    items {
      id
      name
      avatarUrl
    }
    total
  }
        }
      }",
    "variables": Object {
      "communityIds": Array [
        undefined,
      ],
      "details": "details",
      "endTime": "endTime",
      "fileUrls": Array [],
      "id": 1,
      "imageUrls": Array [],
      "locationId": undefined,
      "memberIds": Array [],
      "startTime": "startTime",
      "title": "title",
      "topicNames": Array [],
      "type": "post",
    },
  },
  "meta": Object {
    "analytics": Object {
      "detailsLength": 7,
      "eventName": "Post Updated",
    },
    "extractModel": Object {
      "append": false,
      "getRoot": [Function],
      "modelName": "Post",
    },
  },
  "type": "PostEditor/UPDATE_POST",
}
`;
